umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_rdkit_github72.3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 28
sum_formula: C14ClN3O4S4
graph6: YhCIGE@?K??@?@?C??G?A??O??G??G??C??A??AOO?????@???A???A?
