umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_rdkit_github82.1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 32
sum_formula: C14H15NO
graph6: ^LGOOOC@?C?G?G?C?@_?EG??O?A??A???A???O??@???A??_????A????_???C????O????_????_??
